--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@ POST https://polarapp-oamk.herokuapp.com/users<br>
 GET https://polarapp-oamk.herokuapp.com/users/<b>id</b><br>
 DELETE https://polarapp-oamk.herokuapp.com/users/<b>id</b><br>
 <br>
+//by email<br>
+GET https://polarapp-oamk.herokuapp.com/users/email/<b>email</b><br>
+<br>
 //login<br>
 POST https://polarapp-oamk.herokuapp.com/login<br>
 //body:<br>
