--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@ POST https://polarapp-oamk.herokuapp.com/login<br>
 {<br>
 	"email": "esko.eka@gmail.com",<br>
 	"password": "123"<br>
-}<br>
-
+}<br>¨
+//returns { 'auth': 'true'/'false' }<br>
 </body>
 </html>
 
