updated info page

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,14 @@
                 </div>
               }
           </div>
+          if e-mail already in use, returns:
+          <div style="margin-left: 20px">
+              {<br>
+                <div style="margin-left: 20px">
+                    "error": "E-mail already exists<br>
+                </div>
+              }
+      </div>
       </div>
       <br>
       user by id
