--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
                 <div style="margin-left: 20px">
                   "email": "<b>esko.eka@gmail.com</b>",<br>
                   "password": "<b>123</b>"<br>
+                  <b>...</b><br>
                 </div>
               }
           </div>
@@ -36,7 +37,7 @@
           <div style="margin-left: 20px">
               {<br>
                 <div style="margin-left: 20px">
-                    "error": "E-mail already exists<br>
+                    "error": "E-mail already exists"<br>
                 </div>
               }
       </div>
@@ -66,7 +67,7 @@
               {<br>
                 <div style="margin-left: 20px">
                   "userId": "<b>5ddd2f1a61cd251a6417d4c3</b>",<br>
-                  ...
+                  <b>...</b>
                 </div>
               }
           </div>
