routes by owner

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,17 @@
           </div>
       </div>
       <br>
+      route by id
+      <div class="tab">
+          GET https://polarapp-oamk.herokuapp.com/routes/<b>5def9d93fe995b00178914d8</b><br>
+          DELETE https://polarapp-oamk.herokuapp.com/routes/<b>5ddd2f1a61cd251a6417d4c2</b>
+      </div>
+      <br><br>
+      route by owner
+      <div class="tab">
+          GET https://polarapp-oamk.herokuapp.com/routes/owner/<b>5ddd2f1a61cd251a6417d4c3</b>
+      </div>
+      <br>
       <b>NEW!</b>
       <br><br>
       create new follow
