--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,24 @@
           <b>bolded</b> denotes a placeholder value
         </div>
       <br>
+      <b>NEW!</b> upload image
+      <div class="tab">
+          POST https://polarapp-oamk.herokuapp.com/image-upload<br>
+          requires body:
+          <div style="margin-left: 20px">
+              form data: <b>file</b><br>
+              key: 'image'
+          </div>
+          if successful, returns:
+          <div style="margin-left: 20px">
+              {<br>
+                <div style="margin-left: 20px">
+                    "imageUrl": "https://polarapp-pictures.s3.eu-north-1.amazonaws.com/<b>1576168610185</b>"
+                </div>
+              }
+        </div>
+        </div>
+      <br>
       get all users<br>
       <div class="tab">
         GET https://polarapp-oamk.herokuapp.com/users
@@ -69,7 +87,7 @@
           GET https://polarapp-oamk.herokuapp.com/users/email/<b>esko.eka@gmail.com</b>
       </div>
       <br></br>
-      <b>NEW!</b> user by email w/ follow check
+      user by email w/ follow check
       <div class="tab">
           POST https://polarapp-oamk.herokuapp.com/users/email/followCheck<br>
           requires body:
