--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,13 @@
             {<br>
               <div style="margin-left: 20px">
                 "image": "<b>/9j/4AAQSkZJRgABAQAAAQABAAD/2w...</b>"
+                "myId": "<b>5ddd2f1a61cd251a6417d4c3</b>"
               </div>
             }
+          </div>
+          uploads image at:
+          <div style="margin-left: 20px">
+            https://polarapp-pictures.s3.eu-north-1.amazonaws.com/<b>5ddd2f1a61cd251a6417d4c3</b>
           </div>
         </div>
       <br>
